--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
       <nav class="navbar">
         <img
           class="taksa-logo"
-          src="../../assets/shared/images/taksa-03.svg"
+          src="../../assets/shared/images/taksa-colored.png"
           alt="taksa.logo"
         />
         <div class="links">
@@ -28,5 +28,59 @@
       <hr />
     </header>
     <!-- <div class="img-slider"></div> -->
+  </div>
+  <div class="articles">
+    <h1 class="article-header">ایجاد رایگان صورتحساب</h1>
+    <h5>
+      قبل از عقد قرارداد، بدون پرداخت هزینه، با پر کردن اطلاعات مربوط به
+      صورت‌حساب، کاملا رایگان صورت‌حساب ایجاد کنید.
+    </h5>
+    <div class="free-sign-up">
+      <ul class="sign-up-guide">
+        <li>
+          <div>
+            <img
+              src="../../assets/shared/images/Subtract.svg"
+              alt="Subtract-list-icon"
+            />
+            <h6>ثبت‌نام در سامانه معتمد مالیاتی تکسا</h6>
+          </div>
+
+          <p>
+            با وارد کردن کدملی و اطلاعات خود در سامانه تکسا یک حساب کاربری ایجاد
+            کنید.
+          </p>
+        </li>
+        <li>
+          <div>
+            <img
+              src="../../assets/shared/images/Subtract.svg"
+              alt="Subtract-list-icon"
+            />
+            <h6>
+              وارد کردن شناسه یکتا حافظه مالیاتیوارد کردن شناسه یکتا حافظه
+              مالیاتی
+            </h6>
+          </div>
+          <p>
+            برای ایجاد کسب و کار خود شناسه یکتا حافظه مالیاتی که از سازمان
+            مالیات به نشانی https://my.tax.gov.ir دریافت کرده‌اید را وارد کنید.
+          </p>
+        </li>
+        <li>
+          <div>
+            <img
+              src="../../assets/shared/images/Subtract.svg"
+              alt="Subtract-list-icon"
+            />
+            <h6>انتخاب گزینه “ایجاد صورتحساب”</h6>
+          </div>
+          <p>
+            بعد از ایجاد کسب و کار، می‌توانید اولین صورتحساب خود را ایجاد کنید.
+          </p>
+        </li>
+      </ul>
+      <div class="sign-up-img"></div>
+    </div>
   </div>
 </div>
