--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -995,6 +995,48 @@
         </div>
       </div>
     </div>
-    <div class="add-invoice-steps"><h2>مراحل ثبت صورتحساب الکترونیکی</h2></div>
+    <div class="add-invoice-steps">
+      <div class="add-invoice-title">
+        <h2>مراحل ثبت صورتحساب الکترونیکی</h2>
+      </div>
+      <div class="odd-steps">
+        <div>
+          <p>01</p>
+          <p>فعالسازی کار پوشه</p>
+        </div>
+        <div>
+          <p>03</p>
+          <p>انتخاب شرکت معتمد مالیاتی تکسا</p>
+        </div>
+        <div>
+          <p>05</p>
+          <p>ثبت‌نام در سامانه تکسا</p>
+        </div>
+        <div>
+          <p>07</p>
+          <p>گزارش گیری و مدیریت صورت‌حساب‌ها</p>
+        </div>
+      </div>
+      <div class="view-of-steps">
+        <img
+          src="../../assets/shared/images/view-step-of-taksa.png"
+          alt="taksa-how-to"
+        />
+      </div>
+      <div class="even-steps">
+        <div>
+          <p>02</p>
+          <p>درخواست فعالسازی کارپوشه</p>
+        </div>
+        <div>
+          <p>04</p>
+          <p>دریافت شناسه یکتا حافظه مالیاتی</p>
+        </div>
+        <div>
+          <p>06</p>
+          <p>ایجاد صورت‌حساب</p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
