--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "IRANSansX";
-  src: url(../assets/shared/fonts/IRANSansX-Regular.ttf);
+  src: url(../assets/shared/fonts/IRANSansX-Regular.ttf) format(truetype);
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "IRANSansX";
-  src: url(../assets/shared/fonts/IRANSansX-Bold.ttf);
+  src: url(../assets/shared/fonts/IRANSansX-Bold.ttf) format(truetype);
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -16,8 +16,23 @@
 
 @font-face {
   font-family: "IranSansNum";
-  src: url(../assets/shared/fonts/IRANSansXFaNum-Regular.ttf);
+  src: url(../assets/shared/fonts/IRANSansXFaNum-Regular.ttf) format(truetype);
   font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Anjoman";
+  src: url(../assets/shared/fonts/Anjoman-Regular.ttf) format(truetype);
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Anjoman";
+  src: url(../assets/shared/fonts/Anjoman-Bold.ttf) format(truetype);
+  font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
