--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!-- <app-home-page></app-home-page> -->
-<app-about-us></app-about-us>
+<div class="main-container">
+  <app-home-page></app-home-page>
+  <app-footer></app-footer>
+</div>
+<app-questions></app-questions>
