--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div class="main-container">
-  <app-home-page></app-home-page>
-  <app-footer></app-footer>
-</div>
-<app-questions></app-questions>
+<!-- <app-about-us></app-about-us> -->
+<app-home-page></app-home-page>
